# tools

./: .gitignore  .pre-commit-config.yaml  README.md  alexlewzey  install.sh  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-quality.yml  format-python.yml
clmac/: __init__.py  app.py  callables.py  cli.py  clipboard_listener.py  conftk.py  core.py  encodings.py  keyboard.py  my_calendar.py  typer.py
clmac/cltools/: cbhistory.py  clipurls.py  metronome.py  recolor_image.py  rgb.py  tunings.py
clmac/config/: boilerplate.py  conftk.py  definitions.py  numkeys_1.yaml  template.py
clmac/helpers/: automation.py  clipboard_listener.py  core.py  typer.py
clmac/macro/: app.py  encodings.py
clmac/macro/macros/: clipper.py  formatters.py  gdoclayout.py  img2text.py  launchers.py  replace.py  text2speech.py  writers.py
clmac/macros/: formatters.py  img2text.py  text2speech.ipynb  text2speech.py
clmac/macros/clmac/: text2speech.py
prototyping/: days_from_date.ipynb
src/aliases/: aliases.sh  install.py
src/audiotk/: audiotk.py
src/bayes_bandits/: bandits_animation.py  beta_dist_plots.py  chi2_bandits.py
src/clmac/: app.py  callables.py  cli.py  core.py  keyboard.py
src/clmac/macros/: boilerplate.py  formatters.py  img2text.py
src/examples/: ab_testing.ipynb  aitk.ipynb  dviztk.py  feature_flags.ipynb  gcp_pubsub.ipynb  geotk.py  mltk.py  slibtk.py  train_test_splits.ipynb
src/examples/cloud_function_http/: main.py
src/examples/cloud_function_pubsub/: main.py  makefile  publish.py
src/examples/mlviz/: move_mouse_indefinitely.py  regression_viz.py  requirements.txt  utils.py
src/geotk/: geotk.py
src/guitartk/: guitartk.py
src/houses/: houses.py
src/imgtk/: imgtk.ipynb
src/key_macro/: __init__.py  callables.py  core.py  keyboard.py
src/key_macro/macros/: formatters.py  img2text.py
src/logo/: logo.ipynb
src/mlviz/: regression_viz.py  requirements.txt  rotator.py  utils.py
src/modules/: common.py
tests/: first_mock.ipynb  test_examples.py  test_formatters.py
tests/clmac/: test_clmac.py  test_formatters.py  test_img2text.py
tests/key_macro/: conftest.py  test_formatters.py  test_img2text.py  test_key_macro.py
tools/aliases/: aliases.sh  install.py
tools/examples/: aitk.ipynb  bayesian_ab_testing_animation.ipynb  bayesian_product_ratings.ipynb  dadtk.ipynb  feature_flags.ipynb  gcptk.py  imports.py  llms.ipynb  logo_annimation.ipynb  mltk.py  plot_lifts.ipynb  slibtk.py  strong.csv
tools/examples/cloud_function_http/: makefile
tools/examples/mlviz/: regression_viz.py
tools/key_macro/: app.py  callables.py  cli.py  core.py  keyboard.py
tools/key_macro/macros/: formatters.py  img2text.py
