[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "anthropic>=0.43.1",
    "datasets>=3.2.0",
    "fasttext>=0.9.3",
    "functions-framework>=3.9.2",
    "google-cloud-aiplatform>=1.77.0",
    "google-cloud-iam>=2.17.0",
    "google-cloud-pubsub>=2.29.0",
    "google-cloud-storage>=2.19.0",
    "google-generativeai>=0.8.3",
    "lightgbm>=4.5.0",
    "matplotlib[dev]>=3.9.4",
    "nbformat>=5.10.4",
    "open-clip-torch>=2.30.0",
    "openai>=1.59.8",
    "plotly>=5.24.1",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "scipy[dev]>=1.13.1",
    "sentence-transformers>=3.3.1",
    "tiktoken>=0.8.0",
    "timm>=1.0.13",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
    "ultralytics>=8.3.23",
]

[project.optional-dependencies]
key-macro = [
    "autoflake>=2.3.1",
    "black>=24.10.0",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pynput>=1.7.7",
    "pyperclip>=1.9.0",
    "pytesseract>=0.3.13",
    "pyttsx3>=2.98",
    "sqlfluff>=3.3.0",
    "textblob>=0.18.0.post0",
]
test = [
    "docformatter>=1.7.5",
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]
dev = [
    "pandas>=2.2.3",
]

[project.scripts]
km = "tools.key_macro.app:run"
cli = "tools.key_macro.cli:main"


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true


[tool.ruff]
select = [
    "A", # Pyflakes: general checks
    "B", # pycodestyle: pycodestyle checks
    "C", # mccabe: complexity checks
    # "D",  # pydocstyle: docstring style checks
    "E",  # pycodestyle: pycodestyle errors
    "F",  # pyflakes: unused imports, variables, etc.
    "I",  # isort: import sorting
    "N",  # pep8-naming: naming conventions
    "S",  # bandit: security checks
    "W",  # pycodestyle: pycodestyle warnings
    "UP", # pyupgrade: upgrade python version syntax
]

ignore = [
    "S101", # Ignore use of assert detected
    "S108", # ignore use of tmp
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
fix = true
