[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[dependency-groups]
key-macro = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pytesseract>=0.3.13",
    "pyttsx3>=2.99",
    "sqlfluff>=3.5.0",
    "textblob>=0.19.0",
]
devtk = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
audiotk = [
    "fire>=0.7.1",
    "matplotlib>=3.10.7",
    "pydub>=0.25.1",
    "scipy>=1.15.3",
    "simpleaudio>=1.0.4",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
bayes-bandits = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scipy>=1.15.3",
]
guitartk = [
    "numpy>=2.2.6",
    "rich>=14.2.0",
]


[project.scripts]
km = "src.key_macro.app:run"


[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true


[tool.ruff]
select = [
    "A", # Pyflakes: general checks
    "B", # pycodestyle: pycodestyle checks
    "C", # mccabe: complexity checks
    # "D",  # pydocstyle: docstring style checks
    "E",  # pycodestyle: pycodestyle errors
    "F",  # pyflakes: unused imports, variables, etc.
    "I",  # isort: import sorting
    "N",  # pep8-naming: naming conventions
    "S",  # bandit: security checks
    "W",  # pycodestyle: pycodestyle warnings
    "UP", # pyupgrade: upgrade python version syntax
]

ignore = [
    "S101", # Ignore use of assert detected
    "S108", # ignore use of tmp
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
fix = true
